@@ -26,4 +26,6 @@ touch *.tga
 
 cd ../../../..
 
+cp HowToConnectToMainServer.txt $bundleDir
+
 tar czf $bundleDir.tar.gz $bundleDir
