@@ -1,0 +1,6 @@
+// a secret shared with the server used to verify that "valid" clients
+// are connecting.
+
+// see sharedServerSecret.cpp for more information
+
+extern const char *sharedServerSecret;
